# livekit-plugins-extra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  publish-pypi-boson.yml  publish-pypi-bytedance.yml  publish-pypi.yml
livekit-plugins/livekit-plugins-boson/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-boson/livekit/plugins/boson/: __init__.py  tts.py
livekit-plugins/livekit-plugins-boson/tests/: test_tts.py  test_tts_e2e.py  test_tts_integration.py
livekit-plugins/livekit-plugins-bytedance/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-bytedance/livekit/plugins/bytedance/: __init__.py  log.py  stt.py  tts.py
livekit-plugins/livekit-plugins-bytedance/tests/: test_bytedance_stt.py  test_bytedance_tts.py  test_bytedance_tts_e2e.py
