[project]
name = "livekit-plugins-extra"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["livekit-plugins-boson"]

[tool.uv.sources]
livekit-plugins-boson = { workspace = true }

[tool.uv.workspace]
members = ["livekit-plugins/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<9.1",
    "pytest-asyncio>=0.25.3",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["livekit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["livekit-plugins"]
